...
                            
                        Rectangle()
                            .frame(width: 1, height: 50, alignment: .center)
                            .foregroundColor(.gray)
                            .opacity(10)
                            
                        TextField("Ivanov@mail.com", text: $email)
                            .font(.custom("ND Astroneer.ttf", size: 24))
                            .foregroundColor(Color("gray1"))
                            .frame(width: 260, height: 50, alignment: .center)
                            .padding(.leading,5)
//                            .textContentType(.emailAddress)
                    }
...
